--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^2.2.1",
+    "@ant-design/icons": "^5.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^5.21.4",
+    "css-loader": "^7.1.2",
+    "firebase": "^10.14.1",
+    "firebase-tools": "^13.22.1",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "style-loader": "^4.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
